Primeira edição da tela inicial - itens centralizados

--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
     </header>
     <main class="">
       <section class="inicio">
-        <div>
-          <img class="logo" />
+        <div class="">
+          <p class="titulo inicio-titulo">Líder Joias</p>
           <p class="subtitulo titulo">Relojoaria, ourivesaria e variedades</p>
-          <button class="">Fale Conosco</button>
+          <div class="div-bt">
+            <button class="bt-contato">Fale Conosco</button>
+          </div>
         </div>
       </section>
       <section class="servicos">
