primeiros ajustes em contatos

--- a/index.html
+++ b/index.html
@@ -104,39 +104,8 @@
         <img src="" />
       </section>
       <section class="contato">
-        <p class="titulo">Entre em contato</p>
-        <div>
-          <div class="horarios">
-            <p>Horáros de funcionamento</p>
-            <ul>
-              <li>seg.: 08:00 - 18:00</li>
-              <li>ter.: 08:00 - 18:00</li>
-              <li>qua.: 08:00 - 18:00</li>
-              <li>qui.: 08:00 - 18:00</li>
-              <li>sex.: 08:00 - 18:00</li>
-              <li>sáb.: 08:00 - 13:00</li>
-              <li>dom.: Fechado</li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li>
-                <p>Endereço</p>
-                <p>
-                  Avenida Intendente Norberto Lima, 403-485 - Centro Conceição
-                  do Araguaia - PA
-                </p>
-              </li>
-              <li>
-                <p>Contato</p>
-                <p>(94) 99163-7994</p>
-              </li>
-              <li>
-                <p>Siga nosso perfil</p>
-                <p>@liderjoias.cda</p>
-              </li>
-            </ul>
-          </div>
+        <p class="titulo contato-titulo">Entre em contato</p>
+        <div class="opcoes-contato">
           <div>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3948.399707418669!2d-49.270273725124966!3d-8.262952691770911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93208edeebe183af%3A0xc58ba39264d0cc9a!2zTMOtZGVyIErDs2lhcw!5e0!3m2!1spt-BR!2sbr!4v1687818744971!5m2!1spt-BR!2sbr"
@@ -146,8 +115,41 @@
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
+              class="mapa"
             ></iframe>
           </div>
+
+          <div class="horarios">
+            <p class="horarios-titulo contato-negrito">
+              Horáros de funcionamento
+            </p>
+            <ul class="horarios-lista">
+              <li>seg.: 08:00 - 18:00</li>
+              <li>ter.: 08:00 - 18:00</li>
+              <li>qua.: 08:00 - 18:00</li>
+              <li>qui.: 08:00 - 18:00</li>
+              <li>sex.: 08:00 - 18:00</li>
+              <li>sáb.: 08:00 - 13:00</li>
+              <li>dom.: Fechado</li>
+            </ul>
+          </div>
+          <ul class="endereco-numero">
+            <li>
+              <p class="contato-negrito">Endereço</p>
+              <p>
+                Avenida Intendente Norberto Lima, 403-485 - Centro Conceição do
+                Araguaia - PA
+              </p>
+            </li>
+            <li>
+              <p class="contato-negrito">Contato</p>
+              <p>(94) 99163-7994</p>
+            </li>
+            <li>
+              <p class="contato-negrito">Siga nosso perfil</p>
+              <p>@liderjoias.cda</p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
