--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div class="nav-div">
           <ul class="nav-opcoes">
             <li class="opcoes">
-              <a class="" href="#">Nossos serviços</a>
+              <a class="" href="#">Serviços</a>
             </li>
             <li class="opcoes">
-              <a class="" href="#">Sobre nós</a>
+              <a class="" href="#">Sobre</a>
             </li>
             <li class="opcoes">
               <a class="" href="#">Contato</a>
@@ -100,8 +100,8 @@
           <img src="" />
         </div>
       </section>
-      <section class="">
-        <img src="" />
+      <section class="imagem-transicao">
+        <img src="img/chain.jpg" />
       </section>
       <section class="contato">
         <p class="titulo contato-titulo">Entre em contato</p>
