Ajustes no inicio - Imagem de fundo e botão

--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         <div class="nav-div">
           <ul class="nav-opcoes">
             <li class="opcoes">
-              <a class="" href="#">Serviços</a>
+              <a class="" href="#servicos">Serviços</a>
             </li>
             <li class="opcoes">
-              <a class="" href="#">Sobre</a>
+              <a class="" href="#sobre">Sobre</a>
             </li>
             <li class="opcoes">
-              <a class="" href="#">Contato</a>
+              <a class="" href="#contato">Contato</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     <main class="">
-      <section class="inicio">
+      <section class="inicio" style="background-image: url(img/capa.blur.jpg)">
         <div class="">
           <p class="titulo inicio-titulo">Líder Joias</p>
           <p class="subtitulo titulo">Relojoaria, ourivesaria e variedades</p>
@@ -55,7 +55,7 @@
           </div>
         </div>
       </section>
-      <section class="servicos">
+      <section class="servicos" id="servicos">
         <p class="titulo">Nossos serviços</p>
         <ul class="">
           <li>
@@ -76,7 +76,7 @@
           </li>
         </ul>
       </section>
-      <section class="Sobre">
+      <section class="sobre" id="sobre">
         <div class="">
           <p class="titulo">Sobre a Líder Joias</p>
           <p>
@@ -103,7 +103,7 @@
       <section class="imagem-transicao">
         <img src="img/chain.jpg" />
       </section>
-      <section class="contato">
+      <section class="contato" id="contato">
         <p class="titulo contato-titulo">Entre em contato</p>
         <div class="opcoes-contato">
           <div>
