Edição e responsividade de 'sobre'

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap"
       rel="stylesheet"
     />
+
+    <!-- bootstrap icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+
     <!-- CSS project -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
@@ -81,9 +88,9 @@
         </ul>
       </section>
       <section class="sobre" id="sobre">
-        <div class="">
-          <p class="titulo">Sobre a Líder Joias</p>
-          <p>
+        <div class="sobre-info">
+          <p class="titulo titulo-sobre">Sobre a Líder Joias</p>
+          <p class="loja-descricao">
             Uma empresa familiar que se dedica a criar joias feitas à mão com
             todo o cuidado e atenção. Eles são verdadeiros mestres artesãos que
             criam peças únicas e deslumbrantes. Com a Líder Joias, você pode ter
@@ -95,13 +102,49 @@
             perfeito para aqueles que precisam de uma mãozinha extra para manter
             suas peças em perfeitas condições. Estamos aguardando por você!
           </p>
-          <div class="redes-sociais">
-            <img src="" />
-            <img src="" />
+          <div class="redes-sociais pc">
+            <a
+              class="bt-rede-social"
+              href="https://www.instagram.com/liderjoias.cda/"
+              target="_blank"
+            >
+              <button>
+                <i class="bi bi-whatsapp"></i>
+              </button>
+            </a>
+            <a
+              class="bt-rede-social"
+              href="https://www.instagram.com/liderjoias.cda/"
+              target="_blank"
+            >
+              <button>
+                <i class="bi bi-instagram"></i>
+              </button>
+            </a>
           </div>
         </div>
         <div class="loja">
-          <img src="" />
+          <img src="img/fachada-loja.jpg" />
+        </div>
+        <div class="redes-sociais sp">
+          <a
+            class="bt-rede-social"
+            href="https://www.instagram.com/liderjoias.cda/"
+            target="_blank"
+          >
+            <button>
+              <i class="bi bi-whatsapp"></i>
+            </button>
+          </a>
+          <a
+            class="bt-rede-social"
+            href="https://www.instagram.com/liderjoias.cda/"
+            target="_blank"
+          >
+            <button>
+              <i class="bi bi-instagram"></i>
+            </button>
+          </a>
         </div>
       </section>
       <section class="imagem-transicao">
