Edicao dos elementos de 'servicos'

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
         </div>
       </section>
       <section class="servicos" id="servicos">
-        <p class="titulo">Nossos serviços</p>
-        <ul class="">
-          <li>
-            <img src="" />
+        <p class="titulo servicos-titulo">Nossos serviços</p>
+        <ul class="servicos-opcoes">
+          <li class="servico-icones">
+            <img src="icons/icone-alianca-anel.png" />
             <p>Redução/Aumento de Aliança/Anéis</p>
           </li>
-          <li>
-            <img src="" />
+          <li class="servico-icones">
+            <img src="icons/icone-relogio.png" />
             <p>Reparo de relógios</p>
           </li>
-          <li>
-            <img src="" />
+          <li class="servico-icones">
+            <img src="icons/icone-chave.png" />
             <p>Fabrcação de chaves</p>
           </li>
-          <li>
-            <img src="" />
+          <li class="servico-icones">
+            <img src="icons/icone-sacolas.png" />
             <p>Venda de produtos variados</p>
           </li>
         </ul>
